--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 beautifulsoup4==4.8.2
 flake8==3.7.9
 flake8-isort==2.8.0
+flake8-print-3.1.4
 requests==2.22.0
 pathvalidate==2.0.1
 lxml==4.4.2
-jinja2=2.11.1
-livereload=2.6.1
+jinja2==2.11.1
+livereload==2.6.1
